Se modifica función getMarcaRepuesto
